tests/parser-test-files/bad-files/parse-break.4.error
error: Invalid break
  --> test:5:29
   |
 5 |    (while True (return (fn () (break)))))
   |                               ^^^^^^^ break does not appear in an enclosing loop
